syntax = "proto3";

package blog;

option go_package = "api_gateway/proto/blog";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service BlogService{
    rpc GetById(Id) returns (BlogResponse){
        option (google.api.http) ={
            get:"/blogs/{id}"
        };
    } 
    rpc GetAll(FollowerList) returns (MultiBlogResponse){
        option (google.api.http) ={
            get:"/blogs/all/{id}"
        };
    }

    rpc Create(Blog) returns (EmptyResponse){
        option (google.api.http) = {
            post:"/blogs"
            body:"*"
        };
    }
    rpc Update(Blog) returns (BlogResponse){}
    
    rpc Delete(Id) returns (EmptyResponse){
        option (google.api.http) ={
            delete:"/blogs/{id}"
        };
    }
}

message Id{
    int64 id = 1;
}

message FollowerList{
    repeated int32 id = 1;
}

message Empty{}

message BlogStatus {
    int32 id = 1;
    int32 blogId = 2;
    string name = 3;
}

message BlogRating {
    int32 id = 1;
    int32 blogId = 2;
    int32 userId = 3;
    string rating = 4;
    google.protobuf.Timestamp creationTime = 5;
  }

message Blog{
    enum SystemStatus {
        DRAFT = 0;
        PUBLISHED = 1;
        CLOSED = 2;
    };
    int64 kita = 1;
    int64 creatorId = 2;
    string title = 3;
    string description = 4;
    SystemStatus systemStatus = 5;
    string imageLinks = 6;
    google.protobuf.Timestamp creationDate = 7;
    repeated BlogStatus blogStatuses = 8;
    repeated BlogRating blogRatings = 9;
}

message EmptyResponse{}

message BlogResponse{
    Blog blog = 1;
}

message MultiBlogResponse{
    repeated Blog blogs = 1;
}